package com.dutianze.designpattern.behavioral.strategy.strategy;

/**
 * @author dutianze
 * @date 2022/8/14
 */
@FunctionalInterface
public interface DragonSlayingStrategy {

    void execute();
}